# forjd

./: .cursorrules  .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CUTOVER.md  LOG.MD  README.md  fly.api.toml
.cursor/rules/: forjd-ui-library.mdc  packages-log.mdc  section-comments.mdc
.github/workflows/: backend-ci.yml  frontend-ci.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
backend/app/: __main__.py  main.py
backend/app/addons/: __init__.py  clients.py  hooks.py  registry.py
backend/app/api/v1/: addons.py  anomaly.py  capabilities.py  domain.py  exports.py  ingest.py  ml.py  partner.py  playbooks.py  projections.py  pulse.py  replay.py  reports.py  router.py  service_accounts.py  sessions.py  siem.py  soc.py  stack.py  status.py  tenants.py  threat_intel.py  threat_ml.py  workflows.py
backend/app/core/: auth.py  clients.py  config.py  crypto.py  deps.py  docs_page.py  enrichment.py  ingest_body_limit.py  ingest_limits.py  landing.py  landing_page.py  logging.py  object_storage.py  rate_limit.py  request_context.py  rollbar.py  security.py  sentry.py  worker_health.py
backend/app/models/: anomaly.py  domain.py  ingest.py  ml.py  reports.py  service_account.py  session.py  siem.py  tenant.py  workflows.py
backend/app/pipelines/: analytics.py  anomaly.py  hello.py  ingest.py  projections.py  pulse.py  soft_fail.py  threat_intel.py
backend/app/services/: __init__.py  analytics.py  analytics_worker.py  anomaly.py  assets.py  audit.py  batch.py  compliance.py  correlation.py  engine.py  exports.py  firecrawl.py  honeypot.py  ingest.py  ingest_processing.py  lighthouse.py  osint.py  partner_provision.py  pdf_report.py  playbooks.py  projection_worker.py  projections.py  pulse.py  replay.py  report_documents.py  reports.py  retention.py  security_ingest.py  service_accounts.py  sessions.py  siem.py  site_url.py  soc.py  status.py  stream.py  tenant_erase.py  tenants.py  threat_intel.py  training_worker.py  use_cases.py  (+1 more)
backend/app/services/fetchers/: __init__.py  base.py  crtsh.py  hibp.py
backend/app/services/ml/: __init__.py  classical_anomaly.py  common.py  embeddings.py  forecasting.py  lstm_autoencoder.py  norse_ssn.py  registry.py  sla_model.py  store.py  supabase_bridge.py  threat_ensemble.py  threat_model.py  transformer_anomaly.py
backend/app/workflows/: __init__.py  event_contract.py  loader.py  models.py  registry.py
backend/app/workflows/detectors/: __init__.py  rate_anomaly.py  size_anomaly.py
backend/app/workflows/processors/: __init__.py  rust_sealed_metadata.py  sealed_metadata.py
backend/config/addons/: default.yaml  deml.yaml
backend/docs/: ADDONS.md  AUTH.md
backend/scripts/: apply_sql_migrations.py  smoke_sealed_ingest.py  verify_supabase_post_migration.py
backend/sql/: 001_pulses.sql  002_anomaly_embeddings.sql  003_secure_tenancy.sql  004_crypto_sessions.sql  005_stream_results.sql  006_universal_stream.sql  007_projections.sql  008_status_pages.sql  009_daemon_data_plane.sql  010_audit_and_rate_limits.sql  011_domain_security.sql  012_domain_scanners.sql  013_e2ee_hardening.sql  014_service_accounts.sql  015_realtime_and_consumer.sql  016_ml_supabase.sql  016_service_principal_cutover.sql  017_service_principal_cutover.sql  018_partner_domain_scopes.sql  019_least_privilege_erase_scope.sql  020_headless_siem_soar.sql  021_ingest_projection_reliability.sql  022_report_documents.sql  023_durable_exports.sql  024_durable_ingest_processing.sql  025_siem_soar_replay_continuation.sql  026_partner_provisions.sql  027_partner_provision_isolation.sql  028_status_child_tenant_integrity.sql  README.md
backend/static/: fjord-report-tokens.json
backend/tests/: test_addons.py  test_analytics_formulas.py  test_analytics_worker.py  test_api_deps.py  test_audit.py  test_auth_principals.py  test_capabilities.py  test_clients.py  test_correlation.py  test_crypto.py  test_detectors.py  test_durable_exports.py  test_enrichment_ua.py  test_event_contract.py  test_fetchers.py  test_headless_siem_soar.py  test_honeypot_hit.py  test_ingest_body_limit.py  test_ingest_models.py  test_ingest_processing.py  test_ingest_projection_reliability.py  test_landing_page.py  test_ml_registry.py  test_ml_store.py  test_neon_supabase_etl.py  test_osint_privacy.py  test_partner_provision.py  test_prefect_soft_fail.py  test_rate_limit.py  test_remint_service_account.py  test_report_documents.py  test_request_context.py  test_retention.py  test_security_headers.py  test_security_perf_pass.py  test_site_url.py  test_status_helpers.py  test_status_tenant_integrity.py  test_stream.py  test_stream_sanitize.py  (+5 more)
backend/workflows/: README.md  analytics_events.yaml  default_sealed.yaml  deml_telemetry.yaml  threat_telemetry.yaml
backend/workflows/examples/: partner_aliases.example.yaml  partner_legacy_aliases.example.yaml
docs/: CLEANUP_2026-07-18.md  NEON_TO_SUPABASE.md  NEON_TO_SUPABASE_ETL.md  PRODUCTION_CHECKLIST.md  PRODUCTION_CUTOVER_CHECKLIST.md  PRODUCTION_DEPLOY.md
engine/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  fly.toml  lib.rs  pyproject.toml
engine/daemon/: .env.example  Cargo.toml  Dockerfile  README.md
engine/daemon/src/: bus.rs  config.rs  db.rs  http_server.rs  internode.rs  main.rs
engine/daemon/src/tasks/: cron_publisher.rs  health_pinger.rs  maintenance.rs  mod.rs  normalizer.rs  outbox_relay.rs
engine/src/: lib.rs  pipeline.rs
engine/src/data_plane/: bus.rs  config.rs  cpe.rs  http.rs  internode.rs  mod.rs
engine/src/data_plane/tasks/: cron_publisher.rs  health_pinger.rs  maintenance.rs  normalizer.rs  outbox_relay.rs
frontend/: .gitignore  .npmrc  README.md  angular.json  chromatic.config.json  ngsw-config.json  package-lock.json  package.json  tsconfig.json  vercel.json
frontend/.storybook/: main.ts  (+2 more)
scripts/: apply_sql_on_fly.sh  e2e_sealed_ingest_smoke.py  pg_migrate_neon_to_supabase.sh  remint_service_account.sh  sync_engine_dataplane_secrets.sh  verify_supabase_post_migration.sql
supabase/: README.md
(+68 files in other folders)
