[project]
name = "forjd-backend"
version = "0.1.0"
description = "forjd backend"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.139.0",
    "forjd-engine",
    "httpx>=0.28.1",
    "pathway>=0.2.0",
    "polars>=1.42.1",
    "prefect[redis]>=3.7.8",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "rollbar>=1.4.0",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
forjd = "app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "maturin>=1.8.0",
    "ruff>=0.12.0",
]

[tool.uv.sources]
forjd-engine = { path = "../engine", editable = true }

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.uv]
package = true
