[project]
name = "forjd-backend"
version = "0.1.0"
description = "forjd backend"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=44.0.0",
    "fastapi>=0.139.0",
    "forjd-engine",
    "httpx>=0.28.1",
    # 0.31+ (not the ancient 0.2.0 on PyPI) — needs beartype<0.16; see [tool.uv] override.
    "pathway>=0.31.1",
    "polars>=1.42.1",
    "prefect[redis]>=3.7.8",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.10.0",
    "python-dotenv>=1.2.2",
    "redis>=8.0.1",
    "rollbar>=1.4.0",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
forjd = "app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "maturin>=1.8.0",
    "ruff>=0.12.0",
]
# Optional unsupervised ML PoC (LSTM-AE). Install with: uv sync --group ml
ml = [
    "numpy>=2.0.0",
    "torch>=2.6.0",
]

# CPU wheels for Fly/Linux (avoids multi‑GB CUDA deps). macOS uses the same index.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
forjd-engine = { path = "../engine", editable = true }
torch = { index = "pytorch-cpu" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# FastAPI idiomatic `Depends(...)` defaults.
ignore = ["B008"]

[tool.uv]
package = true
# Pathway 0.31 requires beartype<0.16; Prefect→pydocket asks for beartype>=0.20.
# Prefer Pathway's pin so the stream layer imports; Prefect still runs with 0.15.
override-dependencies = [
    "beartype>=0.14.0,<0.16.0",
]
