[project]
name = "forjd-backend"
version = "0.1.0"
description = "forjd backend"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "cryptography>=44.0.0",
    "fastapi>=0.139.0",
    "forjd-engine",
    "httpx>=0.28.1",
    # 0.31+ (not the ancient 0.2.0 on PyPI) — needs beartype<0.16; see [tool.uv] override.
    "pathway>=0.31.1",
    "polars>=1.42.1",
    "prefect[redis]>=3.7.8",
    "pydantic-settings>=2.14.2",
    "pyjwt[crypto]>=2.10.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "redis>=8.0.1",
    "rollbar>=1.4.0",
    "uvicorn[standard]>=0.51.0",
]

[project.scripts]
forjd = "app.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[dependency-groups]
dev = [
    "maturin>=1.8.0",
    "ruff>=0.12.0",
]
# Optional ML suite (anomaly / threat / forecast / embeddings). Install: uv sync --group ml
ml = [
    "huggingface-hub>=1.0.0",
    "numpy>=2.0.0",
    "scikit-learn>=1.5.0",
    "torch>=2.6.0",
]
# Optional Norse LIF for NorseSSN spiking forecaster. Install: uv sync --group ml-spiking
ml-spiking = [
    "norse>=1.1.0",
]
# Optional Sentence-Transformers for event similarity. Install: uv sync --group ml-nlp
ml-nlp = [
    "sentence-transformers>=3.0.0",
]
# Optional S3-compatible export/report storage. Install with: uv sync --group storage
storage = [
    "boto3>=1.35.0",
]
# Neon → Supabase controlled ETL (scripts/neon_supabase_etl). Install: uv sync --group etl
etl = [
    "psycopg[binary]>=3.2.0",
]
# Optional Sentry error tracking (SENTRY_DSN). Install: uv sync --group sentry
sentry = [
    "sentry-sdk[fastapi]>=2.20.0",
]

# CPU wheels for Fly/Linux (avoids multi‑GB CUDA deps). macOS uses the same index.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
forjd-engine = { path = "../engine", editable = true }
torch = { index = "pytorch-cpu" }

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# FastAPI idiomatic `Depends(...)` defaults.
ignore = ["B008"]

# PDF renderer keeps its original 2-space layout.
[tool.ruff.lint.per-file-ignores]
"app/services/pdf_report.py" = ["E501"]
# ETL tests prepend sys.path before package imports.
"tests/test_neon_supabase_etl.py" = ["E402"]

[tool.uv]
package = true
# Pathway 0.31 requires beartype<0.16; Prefect→pydocket asks for beartype>=0.20.
# Prefer Pathway's pin so the stream layer imports; Prefect still runs with 0.15.
override-dependencies = [
    "beartype>=0.14.0,<0.16.0",
]
