[package]
name = "forjd-engine"
version = "0.3.0"
edition = "2024"
description = "FORJD engine — Arrow/Parquet process + unified data plane (outbox, ingest, probes)"
default-run = "forjd-engine"
rust-version = "1.97"

[lib]
name = "forjd_engine"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "forjd-engine"
path = "src/bin/forjd-engine.rs"
required-features = ["server"]

[dependencies]
# --- Core (always) ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
arrow = "59"
parquet = "59"
bytes = "1"
thiserror = "2"
subtle = "2"

# --- Optional: Python (maturin) ---
pyo3 = { version = "0.29", optional = true }

# --- Optional: HTTP server (Fly / Compose) ---
axum = { version = "0.8", optional = true, features = ["json", "http1", "tokio"] }
tower = { version = "0.5", optional = true, features = ["limit", "timeout", "util"] }
tower-http = { version = "0.6", optional = true, features = ["trace", "limit", "set-header", "request-id", "util"] }

# --- Optional: data plane (sqlx / Dragonfly / probes) ---
anyhow = { version = "1", optional = true }
sqlx = { version = "0.8", optional = true, features = [
  "postgres",
  "uuid",
  "time",
  "chrono",
  "json",
  "runtime-tokio-rustls",
] }
redis = { version = "0.27", optional = true, features = [
  "tokio-rustls-comp",
  "tls-rustls-webpki-roots",
  "script",
  "streams",
] }
reqwest = { version = "0.12", optional = true, features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23", optional = true, default-features = false, features = ["ring", "std"] }
futures = { version = "0.3", optional = true }
chrono = { version = "0.4", optional = true, features = ["serde"] }
aes-gcm = { version = "0.10", optional = true }
base64 = { version = "0.22", optional = true }
uuid = { version = "1", optional = true, features = ["v4", "serde"] }
sha2 = { version = "0.10", optional = true }
hex = { version = "0.4", optional = true }
url = { version = "2", optional = true }
tracing-opentelemetry = { version = "0.33", optional = true }
opentelemetry = { version = "0.32", optional = true }
opentelemetry_sdk = { version = "0.32", optional = true }
opentelemetry-otlp = { version = "0.32", optional = true, default-features = false, features = [
  "trace",
  "http-proto",
  "reqwest-client",
  "reqwest-rustls-webpki-roots",
] }

[features]
default = []
# Enabled for in-process Python (maturin / backend).
python = ["dep:pyo3"]
# Enabled by maturin when building the Python extension.
extension-module = ["python", "pyo3/extension-module"]
# Standalone HTTP service (process + summarize).
server = ["dep:axum", "dep:tower", "dep:tower-http"]
# Unified data plane (outbox relay, ingest, probes, normalizer, scheduler, CPE).
# Requires `server` for the Fly/Compose binary.
data-plane = [
  "server",
  "dep:anyhow",
  "dep:sqlx",
  "dep:redis",
  "dep:reqwest",
  "dep:rustls",
  "dep:futures",
  "dep:chrono",
  "dep:aes-gcm",
  "dep:base64",
  "dep:uuid",
  "dep:sha2",
  "dep:hex",
  "dep:url",
  "dep:tracing-opentelemetry",
  "dep:opentelemetry",
  "dep:opentelemetry_sdk",
  "dep:opentelemetry-otlp",
  "tokio/full",
]
