[package]
name = "forjd-daemon"
version = "0.1.0"
edition = "2021"
description = "FORJD data-plane daemon — outbox relay, telemetry normalizer, health pinger, cron scheduler, ingest edge (Dragonfly Streams bus)"
license = "MIT"
rust-version = "1.75"

[[bin]]
name = "forjd-daemon"
path = "src/main.rs"

[dependencies]
# --- Async runtime ---
tokio = { version = "1", features = ["full"] }

# --- Postgres ---
sqlx = { version = "0.8", features = [
  "postgres",
  "uuid",
  "time",
  "chrono",
  "json",
  "runtime-tokio-rustls",
] }

# --- HTTP client (health probes) ---
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# --- Concurrent futures ---
futures = "0.3"

# --- Timestamps ---
chrono = { version = "0.4", features = ["serde"] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Authenticated internode message encryption ---
aes-gcm = "0.10"
base64 = "0.22"

# --- Logging / tracing / OTEL ---
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-opentelemetry = "0.33"
opentelemetry = "0.32"
opentelemetry_sdk = "0.32"
opentelemetry-otlp = { version = "0.32", default-features = false, features = [
  "trace",
  "http-proto",
  "reqwest-client",
  "reqwest-rustls-webpki-roots",
] }

# --- Error handling ---
anyhow = "1"

# --- UUIDs ---
uuid = { version = "1", features = ["v4", "serde"] }

# --- Internal HTTP health + optional ingest edge ---
axum = { version = "0.8", features = ["json", "http1", "tokio"] }

# --- Ingress auth, custody hashing, Dragonfly bus / rate limits ---
sha2 = "0.10"
hex = "0.4"
subtle = "2"
redis = { version = "0.27", features = [
  "tokio-rustls-comp",
  "tls-rustls-webpki-roots",
  "script",
  "streams",
] }

# --- URL parsing / SSRF controls ---
url = "2"
